--- a/ownliked/WebRoot/WEB-INF/web.xml
+++ b/ownliked/WebRoot/WEB-INF/web.xml
@@ -67,9 +67,9 @@
 <!--	</listener>-->
 	
 <!--  session Timeout	-->
-	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config>
+<!--	<session-config>-->
+<!--		<session-timeout>30</session-timeout>-->
+<!--	</session-config>-->
 	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
