--- a/ownliked/.settings/org.eclipse.core.resources.prefs
+++ b/ownliked/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Thu Jul 26 22:33:12 CST 2012
+#Sun May 12 22:53:42 CST 2013
 eclipse.preferences.version=1
 encoding//src/com/ownliked/pojo/OwnUser.java=UTF-8
+encoding//src/com/ownliked/pojo/OwnUserOther.java=UTF-8
 encoding/<project>=UTF-8
