--- a/ownliked/src/weiboconfig.properties
+++ b/ownliked/src/weiboconfig.properties
@@ -1,6 +1,6 @@
 client_ID = 3689717415  
 client_SERCRET = 747d2469c443a82ee0ca485d17f63583
-redirect_URI = http://0.ownliked.duapp.com/redirect/weibo
+redirect_URI = http://0.ownliked.duapp.com:8080/ownliked/oauth/redirect.h?oauthType=weibo
 baseURL=https://api.weibo.com/2/
 accessTokenURL=https://api.weibo.com/oauth2/access_token
 authorizeURL=https://api.weibo.com/oauth2/authorize
