--- a/ownliked/src/log4j.properties
+++ b/ownliked/src/log4j.properties
@@ -1,23 +1,15 @@
-log4j.rootCategory=warn,ROOT
+log4j.rootCategory=info,RFileWP
+
+log4j.appender.RFileWP=org.apache.log4j.RollingFileAppender
+log4j.appender.RFileWP.File=D:/ownliked/ownliked-log/ownliked-all.log
+log4j.appender.RFileWP.MaxBackupIndex=100
+log4j.appender.RFileWP.MaxFileSize=10MB
+log4j.appender.RFileWP.layout=org.apache.log4j.PatternLayout
+#log4j.appender.RFileWP.layout.ConversionPattern=%d %-5p[%t](%F:%L)-%m%n
+log4j.appender.RFileWP.layout.ConversionPattern=%d %-1p(%F:%L) %m%n
+log4j.appender.RFileWP.Encoding=UTF-8
 
 log4j.category.org.springframework warn,Spring
-log4j.category.business warn,business
-
-log4j.appender.business=org.apache.log4j.ConsoleAppender
-log4j.appender.business.layout=org.apache.log4j.PatternLayout
-log4j.appender.business.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss,SSS} - %m   @ %l%n
-
-log4j.appender.ROOT=org.apache.log4j.ConsoleAppender
-log4j.appender.ROOT.layout=org.apache.log4j.PatternLayout
-log4j.appender.ROOT.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss,SSS} - %m   @ %l%n
-
-log4j.appender.Spring=org.apache.log4j.ConsoleAppender
-log4j.appender.Spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.Spring.layout.ConversionPattern=[Spring]: %-5p %d{yyyy-MM-dd HH:mm:ss,SSS} %C{1}:%M - %m%n
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 
 #ibatis logger config
 log4j.logger.com.ibatis=error
