--- a/ownliked/src/log4j.properties
+++ b/ownliked/src/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.RFileWP.layout=org.apache.log4j.PatternLayout
 log4j.appender.RFileWP.layout.ConversionPattern=%d %-1p(%F:%L) %m%n
 log4j.appender.RFileWP.Encoding=UTF-8
 
-log4j.category.org.springframework warn,Spring
+log4j.category.org.springframework warn
 
 #ibatis logger config
 log4j.logger.com.ibatis=error
@@ -18,4 +18,4 @@ log4j.logger.com.ibatis.common.jdbc.ScriptRunner=error
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=error
 log4j.logger.java.sql.Connection=debug
 log4j.logger.java.sql.Statement=debug
-log4j.logger.java.sql.PreparedStatement=debug,stdout
+log4j.logger.java.sql.PreparedStatement=debug
