Modify image path in css file

--- a/ownliked/WebRoot/WEB-INF/classes/qqconnectconfig.properties
+++ b/ownliked/WebRoot/WEB-INF/classes/qqconnectconfig.properties
@@ -1,6 +1,6 @@
 app_ID = 100444987
 app_KEY = a8be7d1718c50f9307f9cf63d8abf56c
-redirect_URI = http://115.28.40.239/ownliked/oauth/redirect.h?oauthType=qzone
+redirect_URI = http://115.28.40.239/oauth/redirect.h?oauthType=qzone
 scope = get_user_info,add_topic,add_one_blog,add_share,add_t,add_pic_t,del_t,get_info
 #,add_topic,add_one_blog,add_album,upload_pic,list_album,add_share,check_page_fans,add_t,add_pic_t,del_t,get_repost_list,get_info,get_other_info,get_fanslist,get_idollist,add_idol,del_ido,get_tenpay_addr(请修改此处)
 baseURL = https://graph.qq.com/
