--- a/ownliked/WebRoot/WEB-INF/classes/weiboconfig.properties
+++ b/ownliked/WebRoot/WEB-INF/classes/weiboconfig.properties
@@ -1,6 +1,6 @@
 client_ID = 3689717415  
 client_SERCRET = 747d2469c443a82ee0ca485d17f63583
-redirect_URI = http://test.com:8080/ownliked/oauth/redirect.h?oauthType=weibo
+redirect_URI = http://test.com/oauth/redirect.h?oauthType=weibo
 #redirect_URI = http://115.28.40.239/oauth/redirect.h?oauthType=weibo
 baseURL=https://api.weibo.com/2/
 accessTokenURL=https://api.weibo.com/oauth2/access_token
